install button, video embed

--- a/index.html
+++ b/index.html
@@ -13,12 +13,29 @@
 					<img src="Silver_star.png" alt="Silver Star" height="100" width="100" />
 					<h1>Wish</h1>
 					<iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=tltjr&repo=Wish&type=watch&size=large"
-						  allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="35px"></iframe>
+						allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="35px"></iframe>
 					<p>some stuff you probably aren't paying any attention to</p>
 				</div>
 				<div id="content">
 					<h2>The Ultimate Command Line Interface for Windows</h2>
-					<p>Strikingly brilliant content. You are humbled by my marketing skill and flair for documentation.</p>
+					<p>
+					<!-- start slipsum code -->
+
+					Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
+
+					<!-- please do not remove this line -->
+
+					<div style="display:none;">
+						<a href="http://slipsum.com">lorem ipsum</a></div>
+
+					<!-- end slipsum code -->
+					</p>
+					<div id="install">
+						<a href="downloads page" class="button">Install Now!</a>
+					</div>
+					<div id="video">
+						<iframe src="http://player.vimeo.com/video/35270855?title=0&amp;byline=0&amp;portrait=0" width="400" height="225" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe><p><a href="http://vimeo.com/35270855">Dreaming It{aly}</a> from <a href="http://vimeo.com/matthewbrown">Matthew Brown (Matty Brown)</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
+					</div>
 				</div>
 			</div>
 		</div>
