--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<link rel="stylesheet" href="style.css" type="text/css" />
+</head>
+<body>
+<h1>
 My GitHub Page
+</h1>
+</body>
+</html>
