--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <link rel="stylesheet" href="style.css" type="text/css" />
+<script type="text/javascript" src="http://use.typekit.com/awy5zfv.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 <h1>
