--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<link rel="stylesheet" href="style.css" type="text/css" />
-<script type="text/javascript" src="http://use.typekit.com/awy5zfv.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-</head>
-<body>
-<h1>
-My GitHub Page
-</h1>
-</body>
+	<head>
+		<link rel="stylesheet" href="style.css" type="text/css" />
+		<script type="text/javascript" src="http://use.typekit.com/awy5zfv.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	</head>
+	<body>
+		<div id="wrapper">
+			<header>
+			<h1>
+				Wish
+			</h1>
+			</header>
+			<div id="main">
+				<div id="sidebar">
+					<p>some stuff you probably aren't paying any attention to</p>
+				</div>
+				<div id="content">
+					<p>Strikingly brilliant content. You are humbled by my marketing skill and flair for documentation.</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
