--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	</head>
 	<body>
+		<a href="http://github.com/tltjr/Wish"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub"></a>
 		<div id="wrapper">
-			<header>
-			<h1>
-				Wish
-			</h1>
-			</header>
 			<div id="main">
 				<div id="sidebar">
+					<img src="Silver_star.png" alt="Silver Star" height="100" width="100" />
+					<h1>Wish</h1>
+					<iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=tltjr&repo=Wish&type=watch&size=large"
+						  allowtransparency="true" frameborder="0" scrolling="0" width="200px" height="35px"></iframe>
 					<p>some stuff you probably aren't paying any attention to</p>
 				</div>
 				<div id="content">
+					<h2>The Ultimate Command Line Interface for Windows</h2>
 					<p>Strikingly brilliant content. You are humbled by my marketing skill and flair for documentation.</p>
 				</div>
 			</div>
